--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-select": "^5.0.1",
     "axios": "^1.2.2",
     "immutability-helper": "^3.1.1",
     "react": "^18.2.0",
@@ -14,6 +15,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
     "react-scripts": "^5.0.1",
+    "react-select-country-list": "^2.2.3",
     "redux": "^4.2.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
