--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.2.2",
     "immutability-helper": "^3.1.1",
     "react": "^18.2.0",
+    "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-redux": "^8.0.5",
